admission/validatingAdmissionPolicies/policies/livenessprobe-httpget-host/initcontainers/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    security.kolteq.com/warn: enabled
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    security.kolteq.com/audit: enabled
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    security.kolteq.com/enforce: enabled
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: livenessprobe-httpget-host-initcontainers-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 32cab35f-b5d0-5896-a5e6-7c5ac722ffd0
  labels:
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/audit: 'false,true'
    livenessprobe-httpget-host-initcontainers.security.kolteq.com/warn: 'false,true'
    pss.security.kolteq.com/audit: 'baseline,restricted'
    pss.security.kolteq.com/enforce: 'baseline,restricted'
    pss.security.kolteq.com/warn: 'baseline,restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: livenessprobe-httpget-host-initcontainers
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: livenessprobe-httpget-host-initcontainers.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
